--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ deploy:
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: "frontendian-production"
   local_dir: _site
+  on:
+    branch: master
