Shifting publishing schedule to monthly.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: the frontendian
 email: ryan@frontendian.co
 description:
-  en: A little blog about building web applications. Posts arrive weekly on performance, security, accessibility, tooling, and more.
+  en: A little blog about building web applications. Posts arrive monthly on performance, security, accessibility, tooling, and more.
   pt_BR: Um blog simples sobre construção de aplicações web. Posts toda semana sobre performance, segurança, acessibilidade, ferramentas e mais.
 url: "https://frontendian.co"
 markdown: kramdown
