--- a/_config.yml
+++ b/_config.yml
@@ -34,5 +34,7 @@ footer:
   made_with_and_by:
     en: Made with ☕ in Seattle by
     pt_BR: Feito com ☕ em Seattle por
+    fr_FR: Made with ☕ in Seattle by
   translated_by:
     pt_BR: Traduzido para o Português Brasileiro por <a href="http://heitorfig.com/" target="_blank">Heitor Figueiredo</a>.
+    fr_FR: Traduit en français par <a href="https://medium.com/@yanisvieilly" target="_blank">Yanis Vieilly</a>.
